# fks_analyze

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bot  Dockerfile.optimized  README.md  analyze_cli.py  docker-compose.yml  entrypoint.sh  health_check.py  pytest.ini  rebuild.sh  requirements.dev.txt  requirements.txt  start.sh  stop.sh
.github/: dependabot.yml
.github/staging/: analyze.yml  ci.yml  fks_config-ci.yml
.github/workflows/: ci.yml  docker-build-push.yml  tests.yml
docs/: prompts.md
k8s/: health-checks.yaml
shared/docker/scripts/: generate_simple_dockerfiles.sh
shared/docker/templates/: docker-compose.example.yml
src/: analyze.py  analyze_kind.rs  analyzer.rs  autofix.rs  config.rs  diff.rs  discord_bot.rs  filter.rs  findings_persist.rs  focus.rs  index.rs  lib.rs  llm.rs  main.py  main.rs  models.py  multi_scan.rs  persist.rs  pipeline.rs  prompts.rs  report.rs  scan.rs  semantic.rs  server.rs  shell.rs  suggestion.rs  watch.rs
src/api/routes/: analysis.py  health.py  rag.py
src/core/: config.py
src/rag/: __init__.py  config.py  ingestion_service.py  loaders.py  query_service.py  vector_store.py
src/rag/advanced/: __init__.py  hyde.py  raptor.py  self_rag.py
src/rag/evaluation/: __init__.py  ragas_eval.py
src/routers/: analysis.py
src/services/: ai_agents.py  ai_analyzer.py  analyzer.py  documentation.py  rag_pipeline.py  retrieval.py  standardization.py
tests/: basic.rs  fail_on.rs  fail_on_delta.rs  ignore.rs  pipeline_fail_on.rs  pipeline_fail_on_delta.rs  pipeline_json.rs  prompts.rs  prune.rs  report.rs  report_fail_on.rs  report_html.rs  run_tests.py  server.rs  snapshots.rs  test_rag_pipeline.py  test_retrieval.py  unified.rs
tests/integration/: __init__.py  test_rag_api_endpoints.py
tests/unit/: __init__.py
tests/unit/test_rag/: __init__.py  test_hyde.py  test_ingestion_service.py  test_loaders.py  test_query_service.py  test_rag_config.py  test_rag_pipeline_enhanced.py  test_ragas_eval.py  test_raptor.py  test_retrieval_enhanced.py  test_self_rag.py  test_vector_store.py
