[package]
name = "fks_analyze"
version = "0.1.0"
edition = "2021"
description = "Analyze the FKS Project (YAML -> .env, docker snippets, code stubs)."

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0.143"
toml = "0.9.5"
anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features=["fmt","env-filter"] }
chrono = { version = "0.4.41", features=["clock"] }
uuid = { version = "1.18.0", features=["v4"] }
schemars = { version = "1.0.4", features = ["derive"] }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"], optional = true }
hyper = { version = "1.7.0", optional = true }
serde_path_to_error = "0.1.17"
walkdir = "2.5.0"
regex = "1.11.2"
rayon = "1.10.0"
similar = "2.6.0"
flate2 = { version = "1.0.35", features=["miniz_oxide"] }
html-escape = "0.2.13"

# Enhancements
globset = "0.4.16"
blake3 = "1.8.2"
notify = "8.2.0"
reqwest = { version = "0.12.23", default-features = false, features=["json","rustls-tls","blocking"] }
futures = "0.3.31"
once_cell = "1.21.3"
tantivy = { version = "0.25.0", optional = true }

# Discord (optional)
serenity = { version = "0.12.4", default-features = false, features = ["client","gateway","model","http","rustls_backend","standard_framework","builder","utils","unstable_discord_api"], optional = true }

# Shared Rust utilities (added when submodule present at shared/rust)
# shared_rust = { path = "shared/rust", optional = true }

[dev-dependencies]
tempfile = "3.21.0"
tower = { version = "0.5.2", features=["util"] }

[features]
default = ["server"]
# Core HTTP server / CLI enhancements
server = ["axum", "tokio", "hyper"]
# Discord bot integration (Serenity)
discord = ["serenity", "tokio"]
# Semantic code search / indexing (Tantivy)
semantic = ["tantivy"]
# Shared code (placeholder until submodule initialized)
shared = [] # ["shared_rust"] # enable once shared/rust submodule initialized
# Full feature set (previously omitted semantic; now includes it for convenience)
full = ["server", "discord", "semantic"]
# Alias including every optional feature (kept in case additional features added later)
all = ["full"]
